@@ -7,7 +7,7 @@ import dev.spiritstudios.snapper.gui.screen.ScreenshotViewerScreen;
 import dev.spiritstudios.snapper.mixin.accessor.EntryListWidgetAccessor;
 import dev.spiritstudios.snapper.util.SafeFiles;
 import dev.spiritstudios.snapper.util.ScreenshotActions;
-import dev.spiritstudios.snapper.util.ScreenshotImage;
+import dev.spiritstudios.snapper.util.DynamicTexture;
 import dev.spiritstudios.snapper.util.SnapperUtil;
 import dev.spiritstudios.specter.api.core.exception.UnreachableException;
 import net.minecraft.client.MinecraftClient;
@@ -35,11 +35,11 @@ import java.time.Instant;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.time.format.FormatStyle;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<ScreenshotListWidget.Entry> {
     private static final Identifier VIEW_SPRITE = Snapper.id("screenshots/view");
@@ -50,6 +50,8 @@ public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<Screensh
     private final Screen parent;
 
     public final CompletableFuture<List<ScreenshotEntry>> loadFuture;
+
+	public static final int GRID_ENTRY_WIDTH = 144;
 
     private final int gridItemHeight = 81;
     private final int listItemHeight = 36;
@@ -71,7 +73,6 @@ public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<Screensh
 
         this.loadFuture.thenAccept(entries -> {
             this.clearEntries();
-            entries.sort(Comparator.comparingLong(ScreenshotEntry::lastModified).reversed());
             entries.forEach(this::addEntry);
 
             if (entries.isEmpty()) {
@@ -79,7 +80,7 @@ public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<Screensh
             }
         });
 
-        this.showGrid = SnapperConfig.INSTANCE.viewMode.get().equals(ScreenshotViewerScreen.ViewMode.GRID);
+        this.showGrid = SnapperConfig.INSTANCE.viewMode.get().equals(ScreenshotScreen.ViewMode.GRID);
 
         ((EntryListWidgetAccessor) this).setItemHeight(this.showGrid ? this.gridItemHeight : this.listItemHeight);
     }
@@ -102,17 +103,30 @@ public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<Screensh
 
     public CompletableFuture<List<ScreenshotEntry>> load(MinecraftClient client) {
         return CompletableFuture.supplyAsync(() -> {
-            List<Path> screenshots = ScreenshotActions.getScreenshots(client);
-            return screenshots.parallelStream()
-                    .map(file -> new ScreenshotEntry(file, client, parent, screenshots))
-                    .collect(Collectors.toList());
-        });
+                    List<Path> screenshots = ScreenshotActions.getScreenshots();
+
+                    return screenshots.parallelStream()
+                            .flatMap(path -> DynamicTexture.createScreenshot(client.getTextureManager(), path).stream())
+                            .peek(screenshotImage -> screenshotImage.load()
+                                    .exceptionally(throwable -> {
+                                        Snapper.LOGGER.error("An error occurred while loading the screenshot list", throwable);
+                                        return null;
+                                    }))
+                            .map(image -> new ScreenshotEntry(image, client, parent, screenshots))
+                            .sorted(Comparator.comparingLong(ScreenshotEntry::lastModified).reversed())
+                            .toList();
+                })
+                .exceptionally(throwable -> {
+                    Snapper.LOGGER.error("An error occurred while loading the screenshot list", throwable);
+                    return Collections.emptyList();
+                });
     }
 
     private void setEntrySelected(@Nullable ScreenshotEntry entry) {
         super.setSelected(entry);
-        if (this.parent instanceof ScreenshotScreen screenshotScreen)
-            screenshotScreen.imageSelected(entry);
+        if (this.parent instanceof ScreenshotScreen screenshotScreen) {
+			screenshotScreen.imageSelected(entry);
+		}
     }
 
     private int getColumnCount() {
@@ -132,7 +146,7 @@ public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<Screensh
 
     @Override
     public int getRowWidth() {
-        return showGrid ? 144 * getColumnCount() + 4 * (getColumnCount() - 1) : 220;
+        return showGrid ? GRID_ENTRY_WIDTH * getColumnCount() + 4 * (getColumnCount() - 1) : 220;
     }
 
     @Override
@@ -141,10 +155,9 @@ public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<Screensh
             int rowLeft = this.getRowLeft();
             int rowWidth = this.getRowWidth();
             int entryHeight = this.itemHeight - 4;
-            int gridItemWidth = 144;
-            int entryWidth = showGrid ? gridItemWidth : rowWidth;
+            int entryWidth = GRID_ENTRY_WIDTH;
             int entryCount = this.getEntryCount();
-            int spacing = showGrid ? (rowWidth - (getColumnCount() * entryWidth)) / (getColumnCount() - 1) : 0;
+            int spacing = (rowWidth - (getColumnCount() * entryWidth)) / (getColumnCount() - 1);
 
             for (int index = 0; index < entryCount; index++) {
                 int rowTop = this.getRowTop(index);
@@ -177,12 +190,19 @@ public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<Screensh
         return showGrid ? Math.max(0, totalRows * itemHeight - this.height + 4) : super.getMaxScrollY();
     }
 
+    @Override
+    protected int getContentsHeightWithPadding() {
+        if (!this.showGrid) return super.getContentsHeightWithPadding();
+        int totalRows = (getEntryCount() / getColumnCount()) + (getEntryCount() % getColumnCount() > 0 ? 1 : 0);
+        return totalRows * this.itemHeight + this.headerHeight + 4;
+    }
+
     public void toggleGrid() {
         this.showGrid = !this.showGrid;
         ((EntryListWidgetAccessor) this).setItemHeight(this.showGrid ? this.gridItemHeight : this.listItemHeight);
         for (var entry : this.children()) if (entry instanceof ScreenshotEntry sc) sc.setShowGrid(this.showGrid);
 
-        SnapperConfig.INSTANCE.viewMode.set(this.showGrid ? ScreenshotViewerScreen.ViewMode.GRID : ScreenshotViewerScreen.ViewMode.LIST);
+        SnapperConfig.INSTANCE.viewMode.set(this.showGrid ? ScreenshotScreen.ViewMode.GRID : ScreenshotScreen.ViewMode.LIST);
     }
 
     @Override
@@ -320,24 +340,21 @@ public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<Screensh
 
         public final FileTime lastModified;
         private final MinecraftClient client;
-        public final ScreenshotImage icon;
+        public final DynamicTexture icon;
         public final String iconFileName;
-        public Path path;
         public final Screen screenParent;
         private long time;
         private boolean showGrid;
         private final List<Path> screenshots;
         private boolean clickthroughHovered = false;
 
-        public ScreenshotEntry(Path iconPath, MinecraftClient client, Screen parent, List<Path> screenshots) {
+        public ScreenshotEntry(DynamicTexture icon, MinecraftClient client, Screen parent, List<Path> screenshots) {
             this.showGrid = ScreenshotListWidget.this.showGrid;
             this.client = client;
             this.screenParent = parent;
-            this.icon = ScreenshotImage.createScreenshot(this.client.getTextureManager(), iconPath)
-                    .orElse(null);
-            this.path = iconPath;
-            this.iconFileName = iconPath.getFileName().toString();
-            this.lastModified = SafeFiles.getLastModifiedTime(iconPath).orElse(FileTime.fromMillis(0L));
+            this.icon = icon;
+            this.iconFileName = icon.getPath().getFileName().toString();
+            this.lastModified = SafeFiles.getLastModifiedTime(icon.getPath()).orElse(FileTime.fromMillis(0L));
             this.screenshots = screenshots;
         }
 
@@ -360,7 +377,7 @@ public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<Screensh
 
             long creationTime = 0;
             try {
-                creationTime = Files.readAttributes(path, BasicFileAttributes.class).creationTime().toMillis();
+                creationTime = Files.readAttributes(icon.getPath(), BasicFileAttributes.class).creationTime().toMillis();
             } catch (IOException e) {
                 client.setScreen(new ScreenshotScreen(screenParent));
             }
@@ -387,7 +404,8 @@ public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<Screensh
                     false
             );
 
-            if (this.icon != null) {
+            if (icon.loaded()) {
+                //noinspection SuspiciousNameCombination
                 context.drawTexture(
                         RenderLayer::getGuiTextured,
                         this.icon.getTextureId(),
@@ -403,7 +421,7 @@ public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<Screensh
                 context.fill(x, y, x + 32, y + 32, 0xA0909090);
                 context.drawGuiTexture(
                         RenderLayer::getGuiTextured,
-                        mouseX - x < 32 && this.icon != null ?
+                        mouseX - x < 32 && this.icon.loaded() ?
                                 ScreenshotListWidget.VIEW_HIGHLIGHTED_SPRITE :
                                 ScreenshotListWidget.VIEW_SPRITE,
                         x, y,
@@ -418,7 +436,7 @@ public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<Screensh
 
             clickthroughHovered = SnapperUtil.inBoundingBox(centreX - 16, centreY - 16, 32, 32, mouseX, mouseY);
 
-            if (this.icon != null) {
+            if (this.icon.loaded()) {
                 context.drawTexture(
                         RenderLayer::getGuiTextured,
                         this.icon.getTextureId(),
@@ -447,7 +465,7 @@ public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<Screensh
             String creationString = "undefined";
             long creationTime = 0;
             try {
-                creationTime = Files.readAttributes(path, BasicFileAttributes.class).creationTime().toMillis();
+                creationTime = Files.readAttributes(icon.getPath(), BasicFileAttributes.class).creationTime().toMillis();
             } catch (IOException e) {
                 client.setScreen(new ScreenshotScreen(screenParent));
             }
@@ -467,8 +485,7 @@ public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<Screensh
 
             context.drawGuiTexture(
                     RenderLayer::getGuiTextured,
-                    clickthroughHovered &&
-                            this.icon != null ?
+                    clickthroughHovered && icon.loaded() ?
                             ScreenshotListWidget.VIEW_HIGHLIGHTED_SPRITE : ScreenshotListWidget.VIEW_SPRITE,
                     centreX - 16,
                     centreY - 16,
@@ -478,7 +495,7 @@ public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<Screensh
 
             context.drawText(
                     this.client.textRenderer,
-                    fileName,
+                    truncateFileName(fileName, entryWidth, 24),
                     x + 5,
                     y + 6,
                     0xFFFFFF,
@@ -556,7 +573,7 @@ public class ScreenshotListWidget extends AlwaysSelectedEntryListWidget<Screensh
         public boolean click() {
             if (this.icon == null) return false;
             playClickSound(this.client.getSoundManager());
-            this.client.setScreen(new ScreenshotViewerScreen(this.icon, this.path, this.screenParent, this.screenshots));
+            this.client.setScreen(new ScreenshotViewerScreen(this.icon, icon.getPath(), this.screenParent, this.screenshots));
             return true;
         }
 
